# apps/api/openapi.json
@@ -3006,6 +3006,28 @@
             }
           }
         },
+        "parameters": [
+          {
+            "schema": {
+              "type": "string",
+              "format": "uuid",
+              "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
+            },
+            "in": "header",
+            "name": "idempotency-key",
+            "required": false
+          },
+          {
+            "schema": {
+              "type": "string",
+              "minLength": 40,
+              "maxLength": 100
+            },
+            "in": "header",
+            "name": "x-guest-access-token",
+            "required": false
+          }
+        ],
         "responses": {
           "200": {
             "description": "Default Response",
